--- a/style.css
+++ b/style.css
@@ -103,15 +103,31 @@ nav {
 
 .hero-section {
     position: relative;
-    background-image: url(./images/banner-1.png);
+    background-image: url(./images/banner/banner-1.png);
     min-height: 100vh;
     padding-left: 5%;
     width: 100%;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    overflow: scroll;
+    overflow: hidden;
+    transition: 1s ease-in-out;
+    animation: slide-fade 1s forwards;
 }
+
+#left-button #right-button{
+    cursor: pointer;
+    color: #3B44F6;
+}
+
+@keyframes slide-fade {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
 
 .hero-content {
     position: absolute;
@@ -162,13 +178,14 @@ nav {
 .container {
     max-width: 1280px;
     margin: 0 auto;
+    /* padding: 0 2%; */
 }
 
 /* Why us Section start */
 
 .why-us {
     width: 100%;
-    padding: 0 5%;
+    /* padding: 0 5%; */
     display: flex;
     flex-direction: column;
     padding: 70px 0;
@@ -238,7 +255,7 @@ nav {
 
 .games-genre {
     width: 100%;
-    padding: 40px 5%;
+    padding: 40px 0%;
     background-color: #F0F0F0;
 }
 
@@ -278,7 +295,7 @@ nav {
 /* Best Seller section Start */
 .best-seller {
     background-color: #F0F0F0;
-    padding: 30px 5%;
+    padding: 30px 0%;
     padding-bottom: 30px;
 }
 
@@ -314,7 +331,8 @@ nav {
     align-items: center;
     font-size: 34px;
 }
-.slider-btn:hover{
+
+.slider-btn:hover {
     cursor: pointer;
     border: 0.5px solid #D1D1D1;
     box-shadow: 0px 8px 10px rgba(164, 164, 164, 0.07);
@@ -393,9 +411,204 @@ nav {
 
 /* Popular Section Start */
 .popular-games {
-    padding: 30px 5%;
+    padding: 30px 0%;
     padding-bottom: 80px;
     background-color: #F0F0F0;
 }
 
 /* Popular Section End */
+
+/* Coming Soon Section Start */
+.coming-soon {
+    padding: 50px 0 80px 0;
+    background-color: #181818;
+}
+
+.coming-soon--title h2 {
+    font-weight: 600;
+    font-size: 36px;
+    color: #F5F4F9;
+    margin-bottom: 24px;
+}
+
+.row {
+    display: flex;
+    justify-content: space-between;
+}
+
+.col-1 img:nth-child(1) {
+    margin-bottom: 16px;
+}
+
+.col-2 img:nth-child(1) {
+    margin: 16px 0;
+}
+
+/* Coming soon Section End */
+
+/* User Review section Start */
+
+.user-review {
+    padding-top: 80px;
+    padding-bottom: 120px;
+    background-color: #F0F0F0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.user-review--title {
+    max-width: 473px;
+    margin-bottom: 51px;
+    text-align: center;
+}
+
+.user-review--title h2 {
+    font-weight: 600;
+    font-size: 36px;
+    color: #181818;
+    margin-bottom: 16px;
+}
+
+.user-review--title p {
+    font-weight: 400;
+    font-size: 18px;
+    color: #323232;
+}
+
+.user-review--cards {
+    width: 100%;
+    max-width: 986px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.review-card {
+    width: 297px;
+    padding: 32px 24px;
+    border-radius: 6px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #ffffff;
+    transition: ease 0.5s;
+}
+
+.review-card:hover {
+    box-shadow: 0px 0px 5px 5px rgba(59, 68, 246, 0.26);
+}
+
+.review-card img {
+    max-width: 90px;
+    height: auto;
+}
+
+.review-card h2 {
+    text-align: center;
+    margin-top: 24px;
+    font-weight: 500;
+    font-size: 20px;
+    color: #181818;
+}
+
+.review-card ul {
+    display: flex;
+    margin: 6px 0;
+}
+
+.review-card ul li {
+    list-style: none;
+    padding: 0 5px;
+}
+
+.review-card ul li {
+    color: #EDAB00;
+}
+
+.review-card ul li:nth-child(5) {
+    color: #FDE29D;
+}
+
+.review-card p {
+    text-align: center;
+    font-weight: 400;
+    font-size: 14px;
+    color: #323232;
+}
+
+.slider-dot {
+    display: flex;
+    flex-direction: row;
+    width: 44px;
+    justify-content: space-between;
+    color: #D8DAFD;
+    margin-top: 51px;
+}
+
+.slider-dot li {
+    cursor: pointer;
+}
+
+.slider-dot :nth-child(1) {
+    color: #3B44F6;
+}
+
+footer {
+    padding-top: 50px;
+    background-color: #181818;
+}
+
+.footer-content {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
+dt {
+    font-weight: 600;
+    font-size: 18px;
+    color: #F5F4F9;
+    margin-bottom: 24px;
+
+}
+
+dl ul li {
+    list-style: none;
+    margin-top: 16px;
+}
+
+dl ul li a {
+    font-weight: 400;
+    font-size: 16px;
+    color: #A0A0A0;
+    text-decoration: none;
+}
+
+.footer-icons ul {
+    display: flex;
+}
+
+.footer-icons ul li {
+    height: 36px;
+    width: 36px;
+    background: rgba(255, 255, 255, 0.1);
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-right: 12px;
+}
+
+.footer-copyright {
+    padding-top: 65px;
+}
+
+.footer-copyright p {
+    text-align: center;
+    font-weight: 400;
+    font-size: 15px;
+    color: #A0A0A0;
+    padding: 22px 0;
+}
+
+/* User Review section End */
